<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="48dp"
            android:text="Login"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="31sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/shr_logo"
            app:layout_constraintBottom_toTopOf="@+id/texto_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <!-- Snippet from "Add text fields" section goes here. -->

        <TextView
            android:id="@+id/texto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tela_login"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/email_login"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="130dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/texto_login"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="16dp"
            android:hint="@string/input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/input_password"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/textViewSignup"
            app:layout_constraintTop_toBottomOf="@+id/email_login"
            app:layout_constraintVertical_chainStyle="packed" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="Ainda não possui uma conta? Registre-se"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toTopOf="@+id/entrar_button"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/entrar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sign"
            app:icon="@drawable/abc_vector_test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!-- Snippet from "Add buttons" section goes here. -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
